fix template ymlをコメントアウト/go-test.ymlを修正

--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -1,7 +1,11 @@
 name: Go
 
 on:
-  [push]
+  push:
+    branch:
+      - main
+      - create/**
+      - fix/**
   pull_request:
     branches: [ main ]
 
